# TCC-Lista-de-exercicios-auto-corrigiveis

./: README.md
EasyTesting/Archives/agenda/: doctest.h.gch  easy_testing  makefile
EasyTesting/Archives/agenda/.svn/: all-wcprops
EasyTesting/Archives/agenda/src/: agenda.cpp  agenda.h  main.cpp
EasyTesting/Archives/agenda/test/: agenda_test.cpp  agenda_test.h
EasyTesting/Archives/condicionais/: CMakeLists.txt  easy_testing  main  makefile
EasyTesting/Archives/condicionais/.svn/: entries
EasyTesting/Archives/condicionais/gtest/.svn/: entries
EasyTesting/Archives/condicionais/src/: condicionais.h  main.cpp
EasyTesting/Archives/condicionais/src/.svn/: all-wcprops
EasyTesting/Archives/condicionais/test/: condicionais_test.cc  condicionais_test.cpp  condicionais_test.h
EasyTesting/Archives/condicionais/test/.svn/: all-wcprops
EasyTesting/Archives/doctest/: doctest.h.gch
EasyTesting/Archives/funcoes/: easy_testing  main  makefile
EasyTesting/Archives/funcoes/.svn/: all-wcprops
EasyTesting/Archives/funcoes/src/: funcoes.cpp
EasyTesting/Archives/funcoes/test/: funcoes_test.cc  funcoes_test.cpp  funcoes_test.h
EasyTesting/Archives/iteracao/: easy_testing  iteracao.cbp  main  makefile
EasyTesting/Archives/iteracao/src/: iteracao.h  main.cpp
EasyTesting/Archives/iteracao/test/: iteracao_test.cc  (+2 more)
EasyTesting/Archives/list/: makefile
EasyTesting/Archives/matrizes/: easy_testing  main  makefile
EasyTesting/Archives/recursao/: makefile  recursao.cbp
EasyTesting/Archives/shoppingCart/: main  makefile
old/EasyTesting/.svn/: all-wcprops  entries
(+1443 files in other folders)
